--- a/package.json
+++ b/package.json
@@ -20,12 +20,16 @@
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "@react-navigation/stack": "^7.1.3",
+    "axios": "^1.7.9",
     "expo": "~54.0.23",
     "expo-av": "~14.0.7",
     "expo-constants": "~18.0.10",
+    "expo-document-picker": "~11.10.1",
+    "expo-file-system": "~17.0.1",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.10",
+    "expo-image-picker": "~15.0.6",
     "expo-linking": "~8.0.8",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
@@ -42,6 +46,7 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-svg": "~15.5.0",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1"
   },
